[package]
name = "display-dj"
version = "0.4.0"
edition = "2021"

[dependencies]
ddc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = "0.2"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
ddc-winapi = "0.2"
windows = { version = "0.58", features = [
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
] }
winapi = { version = "0.3", features = ["wingdi", "windef"] }
